[package]
name = "async-process"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v2.x.y" git tag
version = "2.1.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2021"
rust-version = "1.63"
description = "Async interface for working with processes"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/async-process"
keywords = ["process", "spawn", "command", "subprocess", "child"]
categories = ["asynchronous", "os"]
exclude = ["/.*"]

[dependencies]
async-lock = "3.0.0"
cfg-if = "1.0"
event-listener = "5.1.0"
futures-lite = "2.0.0"
tracing = { version = "0.1.40", default-features = false }

[target.'cfg(unix)'.dependencies]
async-io = "2.1.0"
async-signal = "0.2.3"
rustix = { version = "0.38", default-features = false, features = ["std", "fs"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
async-channel = "2.0.0"
async-task = "4.7.0"

[target.'cfg(all(unix, not(any(target_os = "linux", target_os = "android"))))'.dependencies]
rustix = { version = "0.38", default-features = false, features = ["std", "fs", "process"] }

[target.'cfg(windows)'.dependencies]
async-channel = "2.0.0"
blocking = "1.0.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
default-features = false
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
]

[dev-dependencies]
async-executor = "1.5.1"
async-io = "2.1.0"
